@@ -14,6 +14,7 @@
 - Add optional ARM processor support
 - Fix autrace to use correct syscalls on i386 systems (Peng Haitao)
 - In auparse, add ability to interpret session and capabilities
+- Add ability for audispd syslog plugin to choose facility local0-7
 
 1.7.18
 - Update time examples in ausearch/report man pages
